fixed content overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -26,4 +26,5 @@ body {
 
 #wrapper {
     max-width: 100vw;
+    overflow-x: hidden;
 }
