--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,7 @@
 #header {
     position: absolute;
     display: flex;
+    width: 100vw;
     justify-content: space-between;
     align-items: center;
     height: 64px;
