--- a/styles/index.css
+++ b/styles/index.css
@@ -53,7 +53,7 @@
 
 #div-2 {
     position: absolute;
-    width: 100vw; 
+    width: 100%;
     margin-top: 0;
     background-color: #55503d;
 }
